--- a/verstcka-hunt/css/style.css
+++ b/verstcka-hunt/css/style.css
@@ -1,8 +1,7 @@
 html {
   box-sizing: border-box;
   scroll-behavior: smooth;
-  margin-left: calc(100vw - 100%);
-  margin-right: 0;
+	overflow-y: scroll;
 }
 
 body {
