--- a/git/css/style.css
+++ b/git/css/style.css
@@ -56,14 +56,71 @@ img {
   padding: 0 15px;
 }
 
-.active {
-  background: linear-gradient(180deg, #31B4E2 0%, #299DC6 100%);
-  color: #fff;
+.check-line {
+  position: relative;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  margin-top: 34px;
+}
+.check-line .block__progress {
+  position: absolute;
+  width: 100%;
+  height: 5px;
+  border: 1px solid #299DC6;
+  border-radius: 10px;
+}
+.check-line .block__progress div {
+  width: 5px;
+  height: 5px;
+  background-color: #299DC6;
+  transition: 0.5s ease width;
+}
+.check-line label {
+  margin: 0;
+}
+
+.check2-line {
+  position: relative;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  margin-top: 34px;
+}
+.check2-line .block2__progress {
+  position: absolute;
+  width: 100%;
+  height: 5px;
+  border: 1px solid #299DC6;
+  border-radius: 10px;
+}
+.check2-line .block2__progress div {
+  width: 5px;
+  height: 5px;
+  background-color: #299DC6;
+  transition: 0.5s ease width;
+}
+.check2-line label {
+  margin: 0;
+}
+
+.blue-line {
+  height: 5px;
+  border: 2px solid #299DC6;
+  flex: 1 1 auto;
+  align-self: center;
+}
+
+.label-mb {
+  position: absolute;
+  top: -40px;
+  left: 5px;
 }
 
 .form-label-radio {
   font-size: 22px;
   line-height: 118.1818181818%;
+  cursor: pointer;
 }
 
 .point {
@@ -120,6 +177,29 @@ img {
     display: block;
   }
 }
+.blox {
+  position: relative;
+  width: 100%;
+  max-width: 1112px;
+  display: flex;
+  justify-content: space-between;
+}
+.blox::before {
+  content: "";
+  background: #FFFFFF;
+  border: 2px solid #299DC6;
+  border-radius: 10px;
+  width: 100%;
+  height: 4px;
+  position: absolute;
+  top: 0;
+  right: 0;
+}
+
+.boxz {
+  display: none;
+}
+
 .header {
   padding: 46px 0 53px 0;
 }
@@ -235,19 +315,6 @@ img {
   font-size: 22px;
   color: #ADADAD;
 }
-.rules-form .slider {
-  -webkit-appearance: none;
-  width: 100%;
-  height: 25px;
-  background: #FFFFFF;
-  border: 2px solid #299DC6;
-  outline: none;
-  opacity: 0.7;
-  transition: opacity 0.2s;
-}
-.rules-form .slider:hover {
-  opacity: 1;
-}
 .rules-form-radio {
   display: flex;
   flex-direction: row;
@@ -276,7 +343,6 @@ img {
   position: relative;
   height: 24px;
   width: 24px;
-  margin-right: 20px;
   border-radius: 50%;
   border: 1px solid #299DC6;
   background-color: #ffffff;
@@ -285,6 +351,9 @@ img {
   outline: none;
   box-sizing: border-box;
   transition: 0.5s all;
+}
+.rules-form-radio .radio-span {
+  margin-right: 20px;
 }
 .rules-form-radio:hover .radio {
   background-color: #fff;
@@ -350,6 +419,10 @@ img {
   background: #F3F3F3;
   overflow: auto;
 }
+.rules-form-column.active {
+  background: linear-gradient(180deg, #31B4E2 0%, #299DC6 100%);
+  color: #fff;
+}
 .rules-form-column {
   display: flex;
   align-items: center;
@@ -358,6 +431,7 @@ img {
   border-radius: 20px;
   padding: 18px 0 18px 25px;
   margin-bottom: 5px;
+  cursor: pointer;
 }
 .rules-form-column:hover {
   border: 2px solid #2AA0C9;
@@ -392,12 +466,12 @@ img {
   display: none;
   padding: 35px 0 0 26px;
 }
+.rules-form-block.active {
+  display: block;
+}
 .rules-form-block {
   position: relative;
   display: none;
-}
-.rules-form-block:target {
-  display: block;
 }
 .rules-form-block-top {
   display: flex;
@@ -534,7 +608,7 @@ img {
   }
 }
 @media (max-width: 878px) {
-  .rules-form-item:nth-child(5) {
+  .rules-form-item:nth-child(7) {
     padding-right: 0;
     padding-left: 0;
   }
