--- a/site-5/css/style.css
+++ b/site-5/css/style.css
@@ -158,7 +158,7 @@ label {
 
 .about__info-title {
   font-size: 30px;
-  line-height: 33px;
+  line-height: 110%;
   font-weight: 700;
   color: #000e00;
   margin-bottom: 25px;
@@ -374,7 +374,8 @@ label {
     padding-bottom: 116px;
   }
   .consruction__logo,
-  .contacts__logo {
+  .contacts__logo,
+  .about__logo {
     margin-bottom: 74px;
   }
 }
@@ -387,7 +388,8 @@ label {
     padding: 85px 0 60px;
   }
   .consruction__logo,
-  .contacts__logo {
+  .contacts__logo,
+  .about__logo {
     margin-bottom: 64px;
   }
   .consruction__text,
@@ -396,6 +398,15 @@ label {
   }
   .info {
     padding: 0 15px;
+  }
+  .about__content {
+    height: 270px;
+  }
+  .about__logo {
+    margin-bottom: 25px;
+  }
+  .about {
+    padding-top: 25px;
   }
 }
 
@@ -413,11 +424,18 @@ label {
     margin-bottom: 0;
   }
   .contacts__logo,
-  .contacts__text {
+  .contacts__text,
+  .about__logo {
     margin-bottom: 25px;
   }
   .contacts {
     padding-top: 25px;
+  }
+  .about__info-title {
+    font-size: 24px;
+  }
+  .about__info-text {
+    font-size: 18px;
   }
 }
 
@@ -431,7 +449,8 @@ label {
     font-size: 17px;
   }
   .consruction__logo,
-  .contacts__logo {
+  .contacts__logo,
+  .about__logo {
     width: 80%;
   }
   .contacts__data-link {
@@ -443,7 +462,8 @@ label {
   .consruction {
     padding: 50px 0;
   }
-  .consruction__logo {
+  .consruction__logo,
+  .about__logo {
     margin-bottom: 38px;
   }
   .consruction__title {
@@ -458,6 +478,15 @@ label {
   }
 }
 
+@media (max-width: 375px) {
+  .about__info-title {
+    font-size: 20px;
+  }
+  .about__info-text {
+    font-size: 16px;
+  }
+}
+
 @media (min-height: 600px) {
   .images {
     width: 56%;
@@ -469,5 +498,6 @@ label {
     width: 100%;
   }
 }
+
 
 
