--- a/site-5/css/style.css
+++ b/site-5/css/style.css
@@ -443,6 +443,9 @@ label {
   .about__info {
     margin-bottom: 30px;
   }
+  .contacts {
+    margin-top: 10px;
+  }
 }
 
 @media (max-width: 475px) {
