--- a/site-8/css/style.css
+++ b/site-8/css/style.css
@@ -29,9 +29,6 @@ p {
 a {
 	text-decoration: none;
 }
-img {
-	max-width: 100%;
-}
 .wrapper {
 	display: -webkit-box;
 	display: -ms-flexbox;
@@ -41,6 +38,7 @@ img {
 	-ms-flex-direction: column;
 	flex-direction: column;
 	min-height: 100%;
+	overflow: hidden;
 }
 .main {
 	-webkit-box-flex: 1;
@@ -68,8 +66,13 @@ a {
 	color: #2b2b2b;
 }
 .header {
+	position: fixed;
+	width: 100%;
+	top: 0;
+	left: 0;
 	background: #252525;
 	padding: 24px 0;
+	z-index: 1000;
 }
 .header-inner {
 	display: -webkit-box;
@@ -108,7 +111,7 @@ a {
 }
 .hero {
 	background: url(../images/hero-bg.jpg) no-repeat center top/cover;
-	padding: 102px 0 208px 0;
+	padding: 220px 0 208px 0;
 }
 .hero-title {
 	text-transform: uppercase;
@@ -270,6 +273,10 @@ a {
 .digitize-items-left {
 	position: relative;
 }
+.digitize-items-right,
+.digitize-items-left img {
+	max-width: 100%;
+}
 .digitize-items-top::before {
 	content: "";
 	position: absolute;
@@ -289,8 +296,7 @@ a {
 }
 .digitize-items-texts {
 	position: absolute;
-	top: 160px;
-	left: 25px;
+	transform: translate(13px, -73px);
 }
 .digitize-items-text {
 	font-size: 16px;
@@ -389,6 +395,9 @@ a {
 	color: #f2d122;
 	margin-bottom: 68px;
 }
+.summium-images img {
+	max-width: 100%;
+}
 .summium-list {
 	width: 100%;
 	max-width: 464px;
@@ -452,8 +461,18 @@ a {
 	text-align: center;
 	margin-bottom: 80px;
 }
+.literature-cards {
+	display: flex;
+	flex-wrap: wrap;
+	justify-content: space-between;
+	align-items: center;
+}
 .literature-card {
 	height: 287px;
+	margin: 0 5px 10px 0;
+}
+.literature-card:last-child {
+	margin-right: 0;
 }
 .literature-card img {
 	object-fit: cover;
@@ -756,6 +775,22 @@ a {
 		margin-right: auto;
 	}
 }
+@media (max-width: 1024px) {
+	.digitize-items {
+		flex-direction: column;
+	}
+	.digitize-items-content {
+		transform: rotateZ(90deg);
+		margin-top: 91px;
+	}
+	.digitize-items-info {
+		transform: rotateZ(90deg);
+		margin: 40px 0;
+	}
+	.digitize {
+		padding-bottom: 148px;
+	}
+}
 @media (max-width: 991px) {
 	.summium {
 		text-align: center;
@@ -766,7 +801,16 @@ a {
 		text-align: left;
 	}
 	.digitize {
-		padding: 80px 0 100px 0;
+		padding-top: 80px;
+	}
+}
+@media (max-width: 786px) {
+	.literature-card {
+		width: 100%;
+	}
+	.literature-card img {
+		width: 100%;
+		height: 100%;
 	}
 }
 @media (max-width: 575px) {
@@ -789,6 +833,27 @@ a {
 	.footer-logo {
 		margin: 0 0 10px 0;
 	}
+	.digitize-items {
+		margin-top: 36px;
+	}
+	.header-burger {
+		display: block !important;
+	}
+	.header-menu-list {
+		display: block;
+	}
+	.header-menu-item {
+		margin: 0 0 30px 0;
+	}
+	.header-menu-item:last-child {
+		margin-bottom: 0;
+	}
+	.header-menu {
+		display: none;
+	}
+	.header {
+		padding: 2px 0;
+	}
 }
 @media (max-width: 500px) {
 	.hero-card,
@@ -803,8 +868,9 @@ a {
 		font-size: 28px;
 	}
 	.hero {
-		padding: 52px 0 86px 0;
+		padding: 126px 0 86px 0;
 	}
+
 	.hero-title {
 		margin-bottom: 34px;
 	}
@@ -863,5 +929,100 @@ a {
 @media (max-width: 375px) {
 	.faq-item-button {
 		font-size: 16px;
+	}
+}
+li {
+	list-style-type: none; /* Убираем маркеры */
+}
+ul {
+	margin-left: 0; /* Отступ слева в браузере IE и Opera */
+	padding-left: 0; /* Отступ слева в браузере Firefox, Safari, Chrome */
+}
+
+/* Start CSS Content */
+.page {
+	padding: 70px 0 30px 0;
+}
+.page__section {
+	padding: 30px;
+	max-width: 1200px;
+	margin: 0 auto;
+}
+.page__section_1 {
+	background-color: #794f45;
+}
+.page__section_2 {
+	background-color: #77608d;
+}
+.page__section_3 {
+	background-color: #7a956b;
+}
+.page__title {
+	font-size: 40px;
+	margin: 0 0 20px 0;
+}
+.page__text {
+	font-size: 16px;
+	line-height: 150%;
+}
+.page__text p {
+	margin: 0 0 20px 0;
+}
+.page__sub-title {
+	font-size: 30px;
+	margin: 0 0 20px 0;
+}
+
+.header-burger {
+	display: none;
+}
+
+@media (max-width: 767px) {
+	.header-burger-icon {
+		z-index: 5;
+		display: block;
+		position: relative;
+		width: 30px;
+		height: 18px;
+		cursor: pointer;
+	}
+	.header-burger-icon span,
+	.header-burger-icon::before,
+	.header-burger-icon::after {
+		left: 0;
+		position: absolute;
+		height: 10%;
+		width: 100%;
+		transition: all 0.3s ease 0s;
+		background-color: #fff;
+	}
+	.header-burger-icon::before,
+	.header-burger-icon::after {
+		content: "";
+	}
+	.header-burger-icon::before {
+		top: 0;
+	}
+	.header-burger-icon::after {
+		bottom: 0;
+	}
+	.header-burger-icon span {
+		top: 50%;
+		transform: scale(1) translate(0px, -50%);
+	}
+
+	.header-burger-body {
+		position: fixed;
+		top: 0;
+		left: -100%;
+		width: 100%;
+		height: 100%;
+		background-color: rgb(0, 0, 0, 0.9);
+		padding: 100px 30px 30px 30px;
+		transition: left 0.3s ease 0s;
+		overflow: auto;
+	}
+	.header-burger-body.active {
+		left: 0;
 	}
 }
